--- a/src/components/TextContainer.css
+++ b/src/components/TextContainer.css
@@ -1,14 +1,15 @@
 body {
     /* fallback for old browsers */
     background: #6a11cb;
-  
+
     /* Chrome 10-25, Safari 5.1-6 */
     background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-  
+
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-  }
-.genel{
+}
+
+.genel {
     display: flex;
     justify-content: center;
     /* align-items: center; */
@@ -16,9 +17,12 @@ body {
     /* margin-top: 10%; */
 }
 
-/* #afs{
-    border: #6a11cb;
-} */
+.progress {
+    --bs-progress-height: 0.25rem;
+    background-color: #efccff;
+
+}
+
 .container-sm {
     background-color: rgb(253, 253, 247);
     color: rgb(0, 0, 0);
@@ -31,6 +35,7 @@ body {
     border-radius: 2rem;
     justify-content: center;
 }
+
 .text-container {
     background-color: rgb(253, 253, 247);
     color: rgb(0, 0, 0);
