--- a/src/components/TextContainer.css
+++ b/src/components/TextContainer.css
@@ -18,9 +18,9 @@ body {
 }
 
 .progress {
-    --bs-progress-height: 0.25rem;
+    --bs-progress-height: 5px;
     background-color: #efccff;
-
+    height: 5px;
 }
 
 .container-sm {
@@ -34,6 +34,10 @@ body {
     padding: 2rem;
     border-radius: 2rem;
     justify-content: center;
+}
+
+.p {
+    margin-bottom: 1rem;
 }
 
 .text-container {
